# sourceLensAI

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  config.example.json  config.json  pyproject.toml  requirements.txt
docs/: how_to add_new_LLM_provider_to_sourceLens.md  how_to integrate_MPC_LLM_interface.md  how_to_Mermaid.md  how_to_add_more_diagrams_to_sourceLens.md  how_to_create_sorceLens_package.md  how_to_project_toml.md  how_to_run_sourceLens.md  sourceLens_design.md
docs/architecture/: 1_introduction_and_architecture.md  2_code_analysis_flow_deep_dive.md  3_web_crawling_flow_deep_dive.md  4_project_evaluation.md  index_architecture.md
docs/assets/: CONFIGURATION.md  INSTALLATION.md  USAGE_CLI_CODE_FLOW.md  USAGE_CLI_GENERAL.md  USAGE_CLI_WEB_FLOW.md  USAGE_INSTALL_FROM_GITHUB.md
docs/how_to/: how_to add_new_LLM_provider_to_sourceLens.md  how_to integrate_MPC_LLM_interface.md  how_to_Mermaid.md  how_to_add_a_new_node_to_a_flow.md  how_to_add_more_diagrams_to_sourceLens.md  how_to_analyze_and_understand_logs.md  how_to_analyze_youtube_content.md  how_to_configure.md  how_to_configure_code_analysis.md  how_to_configure_web_crawling.md  how_to_create_sorceLens_package.md  how_to_debug_and_troubleshoot_the_pipeline.md  how_to_interpret_code_analysis_output.md  how_to_interpret_web_crawling_output.md  how_to_project_toml.md  how_to_run_sourceLens.md  how_to_use_processing_modes.md  index_how_to.md
docs/sourceLens_design_and_uml_diagrams/: 00_sourceLens_design.md  00_sourceLens_diagrams_overview.md  01_main_argparse_failure.md  01_main_config_loading_failure.md  01_main_flow_execution_failure.md  01_main_flow_success.md  01_main_logging_setup_failure_fallback.md  01_main_shared_state_init_override.md  02_config_loading_env_fallback.md  02_config_profile_selection.md  03_flow_error_retry.md  04_node_fetch_source_branching.md  05_node_base_execution_detail.md  06_node_write_batch_loop.md  07_node_combine_output_writing.md  08_util_llm_api_call_cache.md  09_util_validation_yaml_failure.md  10_util_helpers_get_content_usage.md  11_util_github_rate_limit.md  12_e2e_cloud_llm_github_api_fetch_failure.md  12_e2e_cloud_llm_github_api_success.md  12_e2e_cloud_llm_github_private_success.md  12_e2e_cloud_llm_local_source_key_failure.md  12_e2e_local_llm_local_source_success.md  13_package_diagram_module_dependencies.md  14_class_diagram_hierarchy.md
output/: index.md  index_Code_Analysis_GitHub_Repository.md  index_Code_Analysis_Local_Projects.md  index_Web_Content_Analysis.md
output/20250704_1302_code-python-sample-project/: 01_configuration.md  02_data-handling.md  03_item-data-model.md  04_item-processing.md  05_logging.md  06_main-application-pipeline.md  07_relative-imports.md  08_diagrams.md  09_code_inventory.md  10_project_review.md  index.md
output/20250704_1309_code-cpp-sample-project/: 01_artikeldefinition.md  02_artikelverarbeitung.md  03_cmake-projektkonfiguration.md  04_datenverarbeitung.md  05_hauptanwendung.md  06_konfigurationsverwaltung.md  07_diagrams.md  08_code_inventory.md  09_project_review.md  index.md
output/20250704_1313_code-java-sample-project/: 01_configurazione-applicazione.md  02_flusso-di-esecuzione-principale.md  03_gestione-eccezioni.md  04_gestore-dati.md  05_logging.md  06_modello-articolo.md  07_processore-articolo.md  08_diagrams.md  09_code_inventory.md  10_project_review.md  index.md
output/20250704_1316_code-c-sample-project/: 01_configuration-du-projet.md  02_fonction-principale-main.md  03_gestion-des-données-datahandler.md  04_journalisation.md  05_makefile-du-projet.md  06_objet-item.md  07_traitement-des-items-itemprocessor.md  08_diagrams.md  09_code_inventory.md  10_project_review.md  index.md
output/20250704_1322_code-rust-sample-project/: 01_definícia-položky.md  02_dátový-model.md  03_hlavný-program.md  04_konfigurácia-aplikácie.md  05_spracovanie-dát.md  06_spracovanie-položiek.md  07_spracovateľ-položiek-logika.md  08_diagrams.md  09_code_inventory.md  10_project_review.md  index.md
output/20250704_1324_code-javascript-sample-project/: 01_clases-y-objetos.md  02_configuración-de-la-aplicación.md  03_definición-del-proyecto-package.json.md  04_importación-de-módulos.md  05_manejador-de-datos.md  06_modelo-de-datos-item.md  07_orquestador-principal-main.md  08_procesador-de-items.md  09_diagrams.md  10_code_inventory.md  11_project_review.md  index.md
output/20250704_1326_code-go-sample-project/: 01_запуск-та-ініціалізація-програми.md  02_конфігурація.md  03_модель-даних-елемент.md  04_обробник-даних.md  05_обробник-елементів.md  06_основний-потік-обробки.md  07_diagrams.md  08_code_inventory.md  09_project_review.md  index.md
output/20250704_1328_code-typescript-sample-project/: 01_typescript-配置-typescript-pèi-zhì.md  02_主程序-zhǔ-chéng-xù.md  03_数据处理器-shù-jù-chǔ-lǐ-qì.md  04_数据项模型-shù-jù-xiàng-mú-xíng.md  05_配置管理-pèi-zhì-guǎn-lǐ.md  06_项目处理器-xiàng-mù-chǔ-lǐ-qì.md  07_diagrams.md  08_code_inventory.md  09_project_review.md  index.md
output/20250704_1330_code-csharp-sample-project/: 01_आइटम-प्रोसेसर-item-processor.md  02_आइटम-मॉडल-item-model.md  03_कॉन्फ़िगरेशन-config.md  04_डेटा-हैंडलर-data-handler.md  05_प्रोसेसिंग-पाइपलाइन-processing-pipeline.md  06_मुख्य-प्रोग्राम-main-program.md  07_सी-प्रोजेक्ट-फाइल-.csproj.md  08_diagrams.md  09_code_inventory.md  10_project_review.md  index.md
output/20250704_1343_code-php-sample-project/: 01_アイテムプロセッサー-アイテム処理担当.md  02_アイテムモデル-アイテムの型.md  03_オートローダー-自動読み込み.md  04_データハンドラー-データ処理担当.md  05_メイン処理-メインの処理.md  06_設定-せってい.md  07_diagrams.md  08_code_inventory.md  09_project_review.md  index.md
output/20250704_1345_code-ruby-sample-project/: 01_מטפל-נתונים-data-handler.md  02_מעבד-פריטים-item-processor.md  03_פריט-item.md  04_צינור-עיבוד-ראשי-main-processing-pipeline.md  05_תצורה-configuration.md  06_diagrams.md  07_code_inventory.md  08_project_review.md  index.md
output/20250705_1300_code-flask/: index.md  (+13 more)
tests/: __init__.py
tests/cpp_sample_project/: CMakeLists.txt  Config.h  DataHandler.h  Item.h  ItemProcessor.h  main.cpp  project_index_cpp.md
(+565 files in other folders)
